templates/arm/landingzone/nsg/lz-cus/deploymentTemplate.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
  "contentVersion": "1.0.0.1",
  "parameters": {
    "customerid": {
      "type": "string",
      "metadata": {
        "description": "The resource group where the existing VNet is located."
      }
    },
    "virtualNetworkName": {
      "type": "string",
      "defaultValue": "[concat(parameters('customerid'), '-vnet-lz-', parameters('customerid'), '-prd-westeu-001')]",
      "metadata": {
        "description": "The name of the existing VNet"
      }
    },
    "subnetName": {
      "type": "string",
      "defaultValue": "[concat(parameters('customerid'), '-snet-inf-prd-001')]",
      "metadata": {
        "description": "The name of the existing subnet."
      }
    },
    "nsgName": {
      "type": "string",
      "defaultValue":"[concat(parameters('customerid'), '-nsg-snet-lz-', parameters('customerid'), 'inf-prd-001')]",
      "metadata": {
        "description": "The name of the new nsg."
      }
    },
    "subnetName1": {
      "type": "string",
      "defaultValue": "[concat(parameters('customerid'), '-snet-avd-prd-001')]",
      "metadata": {
        "description": "The name of the existing subnet."
      }
    },
    "nsgName1": {
      "type": "string",
      "defaultValue":"[concat(parameters('customerid'), '-nsg-snet-lz-', parameters('customerid'), 'avd-prd-001')]",
      "metadata": {
        "description": "The name of the new nsg."
      }
    }
  },
  "variables": {},
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('nsgName')]",
      "location": "[resourceGroup().location]",
      "apiVersion": "2018-03-01",
      "properties": {
        "securityRules": [
          {
            "name": "SSH",
            "properties": {
              "description": "Allows SSH traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('nsgName1')]",
      "location": "[resourceGroup().location]",
      "apiVersion": "2018-03-01",
      "properties": {
        "securityRules": [
          {
            "name": "SSH",
            "properties": {
              "description": "Allows SSH traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2017-08-01",
      "name": "apply-nsg-to-subnet",
      "type": "Microsoft.Resources/deployments",
      "resourceGroup": "[resourceGroup().name]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName1'))]"
      ],
      "properties": {
        "mode": "Incremental",
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "resources": [
            {
              "apiVersion": "2018-03-01",
              "type": "Microsoft.Network/virtualNetworks/subnets",
              "name": "[concat(parameters('virtualNetworkName'), '/', parameters('subnetName'))]",
              "location": "[resourceGroup().location]",
              "properties": {
                "addressPrefix": "[reference(resourceId(resourceGroup().name, 'Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnetName')), '2018-03-01').addressPrefix]",
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
                }
              }
            },
            {
              "apiVersion": "2018-03-01",
              "type": "Microsoft.Network/virtualNetworks/subnets",
              "name": "[concat(parameters('virtualNetworkName'), '/', parameters('subnetName1'))]",
              "location": "[resourceGroup().location]",
              "properties": {
                "addressPrefix": "[reference(resourceId(resourceGroup().name, 'Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnetName1')), '2018-03-01').addressPrefix]",
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName1'))]"
                }
              }
            }
          ]
        }
      }
    }
  ],
  "outputs": {}
}
